ipc/ipdl/test/ipdl/ok/Pplugin.ipdl
intr protocol Pplugin {
child:
    async __delete__();

};
