ipc/ipdl/test/ipdl/error/tooWeakInterruptAsync.ipdl
protocol tooWeakRPCAsync {

    // it's an error to declare an async protocol with an intr message

parent:  intr Msg();

};
